# myng

./: .gitignore  README.md
backend/: main.py  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: chat.py  location.py  zodiac.py
backend/app/core/: location.py  logger.py  prokerala.py
backend/app/schemas/: chat.py  zodiac.py
backend/app/services/: chat_agent.py
backend/app/services/ai/: chat.py  tools.py
backend/app/services/divination/bazi/: engine.py
backend/app/services/divination/zodiac/: engine.py  prompts.py
backend/integration_tests/: test_prokerala.py  test_zodiac_api.py
backend/tests/zodiac/: fixtures.py  test_zodiac_engine.py
mobile/: package-lock.json  package.json
mobile/.expo/cache/eslint/: .cache_1hrhjil
mobile/.expo/types/: router.d.ts
mobile/app/: _layout.tsx  daily-insight.tsx  index.tsx  portrait.tsx
mobile/app/(tabs)/: _layout.tsx  chat.tsx  daily-insight.tsx  index.tsx
mobile/components/ui/: icon-symbol.tsx
mobile/utils/: storage.ts
